--- a/App.css
+++ b/App.css
@@ -5,6 +5,7 @@
     align-items: center;
     flex-direction: column;
     justify-content: center;
+    background-size:cover;
 }
 .heading{
     color: white;
